<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/app_width"
    android:layout_height="@dimen/app_height" >

    <ImageView
        android:id="@+id/avatarImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/ui_margin"
        android:src="@drawable/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/ui_margin"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:text="@string/user_name"
        android:textSize="@dimen/text_size_16_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />
    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:fontFamily="@font/roboto_regular"
        android:gravity="top"
        android:text="@string/mail"
        android:textSize="@dimen/text_size_16_sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avatarImageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/some_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginEnd="@dimen/margin_standard"
        android:layout_marginTop="@dimen/margin_card_view_bottom_top"
        app:cardCornerRadius="@dimen/CornerRadius"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mail">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/some_image_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/img_margin_start"
                android:layout_marginTop="@dimen/margin_card_view_vertical"
                android:layout_marginEnd="@dimen/img_margin_end"
                android:background="@drawable/image"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/text_image_card"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_image_card"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_card_view_horizontal"
                android:layout_marginTop="@dimen/margin_card_view_vertical"
                android:layout_marginEnd="@dimen/margin_card_view_horizontal"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/text"
                android:textSize="@dimen/text_size_14_sp"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/some_image_card"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/sign_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_card_view_horizontal"
                android:layout_marginBottom="@dimen/margin_card_view_bottom_top"
                android:fontFamily="@font/open_sans_bold"
                android:text="@string/sign"
                android:textSize="@dimen/text_size_18_sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/user_sign_card"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_text_margin_start"
                android:layout_marginTop="@dimen/card_text_margin_top"
                android:layout_marginEnd="@dimen/card_text_margin_end"
                android:layout_marginBottom="@dimen/margin_card_view_bottom_top"
                android:fontFamily="@font/open_sans_regular"
                android:text="@string/inscription"
                android:textSize="@dimen/text_size_18_sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/sign_card"
                app:layout_constraintTop_toBottomOf="@+id/text_image_card" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/some_text_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_standard"
        android:layout_marginTop="@dimen/tag_margin_top"
        android:layout_marginEnd="@dimen/tag_margin_end"
        android:fontFamily="@font/roboto_bold"
        android:gravity="top"
        android:text="@string/tags"
        android:textSize="@dimen/text_size_16_sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_card" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcView_tags"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/rec_view_margin_start"
        android:layout_marginEnd="@dimen/rec_view_margin_end"
        app:layout_constraintBottom_toTopOf="@+id/buttonToSecond"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_text_tag"
        app:layout_constraintWidth_default="spread" />
    <Button
        android:id="@+id/buttonToSecond"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/button_1_margin_start"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@drawable/rounded_button_purple"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/buttonExit"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart= "@dimen/button_2_margin_start"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        android:background="@drawable/rounded_button_red"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18_sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonToSecond" />


</androidx.constraintlayout.widget.ConstraintLayout>


